summative.moria.Moria.scala.error
Compilation error:
Moria:6: error: not found: value prend
  };prend(biscuit)
    ^Moria:6: error: not found: value biscuit
  };prend(biscuit)
          ^